--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "guzzle/guzzle": "*"
+        "guzzle/guzzle": "3.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
